--- a/donate-ui/src/app/pages/user-preferences/user-preferences.page.html
+++ b/donate-ui/src/app/pages/user-preferences/user-preferences.page.html
@@ -1,12 +1,25 @@
 <ion-content>
-  <ion-slides #preferencesSlides pager="false" [options]="slideOpts" (ionSlideDidChange)="updateSlideIndex()">
+  <ion-slides
+    #preferencesSlides
+    pager="false"
+    [options]="slideOpts"
+    (ionSlideDidChange)="updateSlideIndex()"
+  >
     <ion-slide fxLayout="column" fxLayoutAlign="start center">
       <h3 class="slide-title">First, choose the causes you want to support</h3>
       <div fxLayout="row wrap" fxLayoutAlign="center start">
-        <ion-card fxFlex="35" *ngFor="let topic of topics" [class.selected]="topic.isSelected"
-          (click)="selectTopic(topic.name)">
+        <ion-card
+          fxFlex="35"
+          *ngFor="let topic of topics"
+          [class.selected]="topic.isSelected"
+          (click)="selectTopic(topic.name)"
+        >
           <ion-card-content>
-            <img class="topic-icon" [alt]="topic.icon" [src]="'./../../../assets/svg/'+ topic.icon +'.svg'" />
+            <img
+              class="topic-icon"
+              [alt]="topic.icon"
+              [src]="'./../../../assets/svg/'+ topic.icon +'.svg'"
+            />
             <h3 class="topic-title">{{ topic.name }}</h3>
           </ion-card-content>
         </ion-card>
@@ -16,32 +29,52 @@
       <h3 class="slide-title">Next, set some preferences</h3>
       <ion-list>
         <ion-item lines="none">
-          <ion-label>Go Local<br>
-          <h6 class="subtitle">Prioritize charities and causes that are close to me</h6>
+          <ion-label
+            >Go Local<br />
+            <h6 class="subtitle">
+              Prioritize charities and causes that are close to me
+            </h6>
           </ion-label>
-          <ion-toggle ></ion-toggle>
+          <ion-toggle [(ngModel)]="goLocal"></ion-toggle>
         </ion-item>
-      
+
         <ion-item lines="none">
-          <ion-label>Optimize My Donation<br>
-          <h6 class="subtitle">Priotitize charities and causes that make my money go further through matching ($1 donated means the charity gets $2)</h6>
+          <ion-label
+            >Optimize My Donation<br />
+            <h6 class="subtitle">
+              Priotitize charities and causes that make my money go further
+              through matching ($1 donated means the charity gets $2)
+            </h6>
           </ion-label>
-          <ion-toggle ></ion-toggle>
+          <ion-toggle [(ngModel)]="optimizeDonation"></ion-toggle>
         </ion-item>
-      
+
         <ion-item lines="none">
-          <ion-label>Get Those Tax Returns<br>
-          <h6 class="subtitle">Only show charities and causes that will provide a proof of donation for tax purposes</h6></ion-label>
-          <ion-toggle></ion-toggle>
+          <ion-label
+            >Get Those Tax Returns<br />
+            <h6 class="subtitle">
+              Only show charities and causes that will provide a proof of
+              donation for tax purposes
+            </h6></ion-label
+          >
+          <ion-toggle [(ngModel)]="taxReturns"></ion-toggle>
         </ion-item>
       </ion-list>
     </ion-slide>
     <ion-slide fxLayout="column" fxLayoutAlign="start center">
       <h3 class="slide-title">Choose your payment method</h3>
-      <ion-card class="payment-card" *ngFor="let method of paymentMethod" [class.selected]="method.isSelected"
-        (click)="selectPaymentMethod(method.name)">
+      <ion-card
+        class="payment-card"
+        *ngFor="let method of paymentMethod"
+        [class.selected]="method.isSelected"
+        (click)="selectPaymentMethod(method.name)"
+      >
         <ion-card-content>
-          <img class="topic-icon" [alt]="method.icon" [src]="'./../../../assets/svg/'+ method.icon +'.svg'" />
+          <img
+            class="topic-icon"
+            [alt]="method.icon"
+            [src]="'./../../../assets/svg/'+ method.icon +'.svg'"
+          />
           <h3 class="topic-title">{{ method.name }}</h3>
         </ion-card-content>
       </ion-card>
