--- a/donate-ui/src/app/pages/home/home.page.scss
+++ b/donate-ui/src/app/pages/home/home.page.scss
@@ -1,27 +1,26 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.home-header {
+  margin: 10px;
+  margin-top: 40px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+.charity-card {
+  border: 2px solid black;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+  ion-card-title {
+    font-size: 18px;
 
-  color: #8c8c8c;
+    .charity-impact {
+      cursor: pointer;
+    }
+  }
 
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  .image-container {
+    height: 150px;
+    border-bottom: 2px solid black;
+    .charity-image {
+      width: 100%;
+      height: 100%;
+      opacity: 0.5;
+    }
+  }
 }
