--- a/donate-ui/src/app/pages/login/login.page.html
+++ b/donate-ui/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
       <img src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=mp&f=y">
     </ion-avatar>
     <h3>App name</h3>
-    <h1>Create account</h1>
+    <h1>Login</h1>
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
       <ion-input #email type="email" inputmode="email" [(ngModel)]="credentials.email"></ion-input>
@@ -15,7 +15,7 @@
     </ion-item>
     <ion-item lines="none" class="mt-5">
       <ion-button (click)="login()">
-        Register
+        Login
       </ion-button>
     </ion-item>
     <a class="mt-3" [routerLink]="['/register']" routerLinkActive="active">Don't have an account? Register</a>
