danation flow - first part

--- a/donate-ui/src/app/pages/tabs/tabs.page.html
+++ b/donate-ui/src/app/pages/tabs/tabs.page.html
@@ -21,7 +21,12 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
-<ion-fab vertical="bottom" horizontal="center" slot="fixed">
+<ion-fab
+  vertical="bottom"
+  horizontal="center"
+  slot="fixed"
+  (click)="goToRegisterDonation()"
+>
   <ion-fab-button>
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
