--- a/donate-ui/src/app/components/topic-card/topic-card.component.html
+++ b/donate-ui/src/app/components/topic-card/topic-card.component.html
@@ -5,7 +5,7 @@
 
   <ion-slides>
     <ion-slide *ngFor="let charity of charities">
-      <ion-card class="charity-card">
+      <ion-card class="charity-card" (click)="goToCharityDetails(charity)">
         <div class="image-container">
           <img src="./../../../assets/png/x.png" class="charity-image" />
         </div>
