--- a/donate-ui/src/app/pages/tabs/tabs.page.html
+++ b/donate-ui/src/app/pages/tabs/tabs.page.html
@@ -15,7 +15,7 @@
         <ion-icon name="cash-outline"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button tab="account">
+      <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar>
