--- a/donate-ui/src/app/pages/home/home.page.html
+++ b/donate-ui/src/app/pages/home/home.page.html
@@ -14,14 +14,13 @@
         <ion-card-title>$10.000 goal reached</ion-card-title>
       </ion-card-header>
 
-      <!-- TODO: update with charity description -->
       <ion-card-content>
-        <b>{{charity.name}}</b> <br />Lorem Ipsum is simply dummy text of the
-        printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard.
+        <b>{{charity.name}}</b> <br />{{charity.description}}
         <br />
         <br />
-        <p class="charity-impact">Read about the impact ></p>
+        <p class="charity-impact">
+          <a [href]="charity.websiteUrl">Read about the impact ></a>
+        </p>
       </ion-card-content>
     </ion-card>
   </ng-container>
