--- a/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
+++ b/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
@@ -12,21 +12,21 @@
 <ion-content>
   <div class="donation-methods-container">
     <h2 class="title">Select donation method</h2>
-    <div class="donation-method">
+    <div class="donation-method" (click)="goToRoundUpMethod()">
       <div class="subtitle">Round up</div>
       <p>
         App will round up to the nearest dollar on every purchase made using
         your bank card and donate that money to the cause
       </p>
     </div>
-    <div class="donation-method">
+    <div class="donation-method" (click)="goToIncognitopMethod()">
       <div class="subtitle">Incognito</div>
       <p>
         App will take a set amount time you perform an action, with limits you
         can control eg take 25c every time you use your card
       </p>
     </div>
-    <div class="donation-method">
+    <div class="donation-method" (click)="goToDeterminedMethod()">
       <div class="subtitle">Determined</div>
       <p>
         Carefully select how much you want to donate to which charities, when
