--- a/donate-ui/src/app/pages/donation-methods/incognito/_incognito.theme.scss
+++ b/donate-ui/src/app/pages/donation-methods/incognito/_incognito.theme.scss
@@ -10,6 +10,10 @@
 
     .incognito-fields {
       width: 100%;
+
+      .mat-form-field-flex {
+        background: white !important;
+      }
     }
   }
 }
