--- a/donate-ui/src/app/pages/donation-methods/round-up/round-up.component.html
+++ b/donate-ui/src/app/pages/donation-methods/round-up/round-up.component.html
@@ -30,7 +30,7 @@
         >Donate until a specific date</mat-radio-button
       >
 
-      <mat-form-field appearance="fill" dense>
+      <mat-form-field appearance="fill" dense class="round-up-field">
         <input
           matInput
           [matDatepicker]="picker"
@@ -45,7 +45,7 @@
         >Donate until reach a limit of</mat-radio-button
       >
 
-      <mat-form-field appearance="fill" dense>
+      <mat-form-field appearance="fill" dense class="round-up-field">
         <mat-icon color="accent" matPrefix>attach_money</mat-icon>
         <input matInput placeholder="amount" type="number" autocomplete="off" />
       </mat-form-field>
