--- a/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
+++ b/donate-ui/src/app/pages/charity-details/_charity-details.theme.scss
@@ -1,4 +1,6 @@
 @mixin app-charity-details($theme) {
+  $primary: map-get($theme, primary);
+
   .charity-details {
     padding: $uxg-spacing-3;
   }
@@ -25,25 +27,19 @@
     margin: 0;
     text-align: right;
     padding-right: $uxg-spacing-2;
-    margin-top: -10px;
+    margin-top: -10px !important;
   }
 
   .current-value {
     margin: 0;
     text-align: right;
     padding-right: $uxg-spacing-2;
-    margin-bottom: -10px;
+    margin-bottom: -10px !important;
     font-size: 18px;
     font-weight: 600;
   }
 
   .update-container {
-    border-bottom: 3px solid green;
-
-    .text {
-      font-size: 14px;
-      margin-bottom: $uxg-spacing-3;
-      margin-top: $uxg-spacing-3;
-    }
+    border-bottom: 3px solid mat-color($primary, default);
   }
 }
