--- a/donate-ui/src/global.scss
+++ b/donate-ui/src/global.scss
@@ -34,10 +34,12 @@
 
 @import "./app/pages/donation-methods/donation-methods.theme";
 @import "./app/pages/charity-details/charity-details.theme";
+@import "./app/pages/add-donation/add-donation.theme";
 @import "~@ffdc/uxg-angular-theme/lib/core/style/spacing";
 
 @mixin app-theme($theme) {
   @include app-donation-method($theme);
   @include app-charity-details($theme);
+  @include app-add-donation($theme);
 }
 @include app-theme($uxg-light-theme);
