--- a/donate-ui/src/theme/variables.scss
+++ b/donate-ui/src/theme/variables.scss
@@ -40,20 +40,20 @@ $app-theme: mat-light-theme(
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #26d07c;
+  --ion-color-primary-rgb: 38, 208, 124;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #5ddc9d;
+  --ion-color-primary-tint: #92e7bd;
 
   /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
+  --ion-color-secondary: #414141;
+  --ion-color-secondary-rgb: 65, 65, 65;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-shade: #000000;
+  --ion-color-secondary-tint: #d8d8d8;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
