--- a/donate-ui/src/app/pages/register/register.page.html
+++ b/donate-ui/src/app/pages/register/register.page.html
@@ -3,7 +3,7 @@
     <ion-avatar>
       <img src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=mp&f=y">
     </ion-avatar>   
-    <h3>App name</h3>
+    <h3>iGive</h3>
     <h1>Create account</h1>
     <ion-item>
       <ion-label position="stacked">First Name</ion-label>
@@ -28,6 +28,6 @@
     </ion-item>
     <a class="mt-3" [routerLink]="['/login']" routerLinkActive="active">Already have an account? Log in</a>
     <span class="fill-remaining-space"></span>
-    <a class="mb-6">About App</a>
+    <a class="mb-6">About iGive</a>
   </div>
 </ion-content>
