--- a/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
+++ b/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="welcome">
-    <h1>Welcome to App!</h1>
+    <h1>Welcome to iGive!</h1>
     <h6>The app for donating without having to think about it</h6>
 
     <div fxLayout="row" fxLayoutAlign="start center">
