header for user-preferences & donation flows

--- a/donate-ui/src/app/pages/add-donation/add-donation.page.html
+++ b/donate-ui/src/app/pages/add-donation/add-donation.page.html
@@ -1,5 +1,5 @@
-<ion-header class="add-donation-header">
-  <h3 class="title">Add a Donation</h3>
+<ion-header class="tall-header">
+  <h2 class="title">Add a Donation</h2>
   <p class="subtitle">Select the cause you want to support</p>
 </ion-header>
 <ion-content>
