--- a/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
+++ b/donate-ui/src/app/pages/user-preferences/welcome/welcome.component.html
@@ -1,9 +1,13 @@
+<ion-header class="short-header"> </ion-header>
+
 <ion-content>
   <div class="welcome">
-    <h1>Welcome to iGive!</h1>
-    <h6>The app for donating without having to think about it</h6>
+    <h2 class="title">Welcome to iGive!</h2>
+    <p class="subtitle">
+      The app for donating without having to think about it
+    </p>
 
-    <div fxLayout="row" fxLayoutAlign="start center">
+    <div fxLayout="row" fxLayoutAlign="start center" class="description">
       <img
         class="checkmark"
         alt="checkmark"
@@ -14,7 +18,7 @@
         dollar and donating the difference
       </p>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start center">
+    <div fxLayout="row" fxLayoutAlign="start center" class="description">
       <img
         class="checkmark"
         alt="checkmark"
@@ -25,7 +29,7 @@
         local or global
       </p>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start center">
+    <div fxLayout="row" fxLayoutAlign="start center" class="description">
       <img
         class="checkmark"
         alt="checkmark"
