--- a/donate-ui/src/app/pages/add-donation/_add-donation.theme.scss
+++ b/donate-ui/src/app/pages/add-donation/_add-donation.theme.scss
@@ -1,10 +1,6 @@
+@import "./topic-card/topic-card.theme";
+
 @mixin app-add-donation($theme) {
-  .add-donation-header {
-    padding: 10px;
-    .subtitle {
-      font-size: 14px;
-    }
-  }
   .add-donation-container {
     padding: 0 10px;
   }
@@ -16,4 +12,6 @@
       background: white !important;
     }
   }
+
+  @include app-topic-card($theme);
 }
