--- a/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
+++ b/donate-ui/src/app/pages/donation-methods/donation-methods.page.html
@@ -1,12 +1,11 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button
-        defaultHref="tabs/charity-details"
-        text=""
-      ></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header class="short-header">
+  <ion-buttons slot="start" class="back-btn-container">
+    <ion-back-button
+      class="back-btn"
+      defaultHref="tabs/charity-details"
+      text=""
+    ></ion-back-button>
+  </ion-buttons>
 </ion-header>
 
 <ion-content>
