--- a/donate-ui/src/app/pages/donation-methods/round-up/round-up.component.html
+++ b/donate-ui/src/app/pages/donation-methods/round-up/round-up.component.html
@@ -1,9 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button text="" (click)="back()"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header class="short-header">
+  <ion-buttons slot="start" class="back-btn-container">
+    <ion-back-button
+      defaultHref=""
+      class="back-btn"
+      text=""
+      (click)="back()"
+    ></ion-back-button>
+  </ion-buttons>
 </ion-header>
 
 <ion-content>
