--- a/donate-ui/src/app/pages/payment/paypal-account/paypal-account.component.html
+++ b/donate-ui/src/app/pages/payment/paypal-account/paypal-account.component.html
@@ -1,10 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button text="" icon="chevron-back"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header class="short-header">
+  <ion-buttons slot="start" class="back-btn-container">
+    <ion-back-button
+      class="back-btn"
+      text=""
+      icon="chevron-back"
+    ></ion-back-button>
+  </ion-buttons>
 </ion-header>
+
 <ion-content>
   <div class="paypal-account" fxLayout="column" fxLayoutAlign="center center">
     <img
@@ -13,20 +16,23 @@
       [src]="'./../../../../assets/svg/paypal.svg'"
     />
     <h3 class="topic-title">PayPal Account</h3>
- 
+
     <ion-item>
       <ion-label position="stacked">Account number</ion-label>
-      <ion-input type="string" [(ngModel)]="paypalDetails.accountNumber"></ion-input>
+      <ion-input
+        type="string"
+        [(ngModel)]="paypalDetails.accountNumber"
+      ></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Access code</ion-label>
-      <ion-input type="string" [(ngModel)]="paypalDetails.accessCode"></ion-input>
+      <ion-input
+        type="string"
+        [(ngModel)]="paypalDetails.accessCode"
+      ></ion-input>
     </ion-item>
     <ion-item lines="none" class="save-btn">
-      <ion-button (click)="save()">
-        Save
-      </ion-button>
+      <ion-button (click)="save()"> Save </ion-button>
     </ion-item>
   </div>
-  
 </ion-content>
